[package]
name = "sbus-protocol"
version = "0.1.0"
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
repository = "https://github.com/jettify/sbus-protocol"
categories = ["embedded", "no-std", "parser-implementations", "SBUS"]
license = "Apache-2.0"
edition = "2024"
[dependencies]
defmt = { version = "0.3", optional = true }

[features]
"defmt" = ["dep:defmt"]
