[package]
name = "uf-sbus"
version = "0.1.0"
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
repository = "https://github.com/jettify/uf-sbus"
categories = ["embedded", "no-std", "parser-implementations", "SBUS"]
license = "Apache-2.0"
edition = '2021'
[dependencies]
defmt = { version = "1.0.1", optional = true }

[features]
"defmt" = ["dep:defmt"]
